# sheetauto

./: __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-publish.yml
